Revised the section / subsections in Chapter 6

--- a/ch_results_conclusions.tex
+++ b/ch_results_conclusions.tex
@@ -1,3 +1,5 @@
+%!TEX root = main.tex
+
 %===============================================================================
 %     File: ch4_evaluation_results.tex
 %    Author: Juan de Monasterio
@@ -17,7 +19,8 @@
 % handling data, models and features with acumen
 % After extensive research of machine learning literature and CDR usage in health problems.
 
-The idea of this chapter is to present a combined overview of the work done and results we encountered in \cref{ch:descr-risk, ch:machineLearning, ch:modelSelection, ch:ensembleMethods}.
+The idea of this chapter is to present a combined overview of the work done and results we encountered in 
+\cref{ch:descr-risk,ch:machineLearning,ch:modelSelection,ch:ensembleMethods}.
 All in all, we intend to showcase most of the relevant information from the preceding sections.
 The overall picture of this work shows that there is evidence to confirm the hypothesis which stipulates that there are social interactions captured by the cellphone usage logs.
 This is because the data-set is informative enough on long-term migrations and human mobility.
@@ -60,7 +63,7 @@ The best models can find complex interactions in the data whilst taking care not
 
 \todo{Reword sentences. Expand, correct and finish them in a cohesive structure.}
 
-\subsection{Key Results}
+\section{Key Results}
 
 \todo{Rewrite all key results of the project.}
 
@@ -88,7 +91,7 @@ The detection of these antennas through the visualizations was of great value to
 
 
 
-In \cref{ch:machineLearning, ch:modelSelection, ch:ensembleMethods }, we introduced and evaluated a systematic process that tackles the problem of predicting long-term migrations.
+In \cref{ch:machineLearning,ch:modelSelection,ch:ensembleMethods}, we introduced and evaluated a systematic process that tackles the problem of predicting long-term migrations.
 As a start, we wrote an introductory review for a list of supervised classification algorithms.
 
 Then, through a number of experiments, we demonstrated how the supervised classification models performed across different prediction tasks.
@@ -132,7 +135,7 @@ Finally, the results stand as a proof of concept which can be extended to other 
 
 
 
-\subsection{In-depth discussion}
+\section{In-depth discussion}
 
 
 % - hacer explicita la respuesta a esta pregunta: Que tanto se puede predecir long term migrations usando datos de CDRs?
@@ -154,7 +157,7 @@ Migration patterns can then be used to suggest actual epidemic spread of this di
 
 
 
-\subsection{Drawbacks on the methodology}
+\section{Drawbacks on the methodology}
 
 Several weak points can be made on our methodology.
 An important observation is that we can not directly jump these conclusions on-to a disease spread model.
