add conclusion todos

--- a/ch_results_conclusions.tex
+++ b/ch_results_conclusions.tex
@@ -9,6 +9,7 @@
 
 \chapter{Summary of Results and Conclusion}\label{ch:results_conclusion}
 
+\todo{This is work in progress.}
 
 %\cref{ch:descr-risk}
 %\cref{ch:machineLearning}
